- Fixed some bugs about folder names and zip files and naming etc
[B]Version 1.1.2[/B]
- Fixed some bugs about folder names and zip files and naming etc
[B]Version 1.2.0[/B]
- Updated live channels, seems better now
[B]Version 2.0.0[/B]
- Implemented RTMP streaming now.
- Option to select which steam to play as well as the default select

[B]Version 2.1.0[/B]
- Support for Gotham

[B]Version 2.2.0[/B]
- Reading streams from the source-eboundservices

[B]Version 2.2.1[/B]
- Fixed dependencie
[B]Version 2.2.2[/B]
- Progress bars etc while streaming
[B]Version 2.2.3[/B]
- house cleaning
[B]Version 2.2.4[/B]
- Timeout specified while live streaming
[B]Version 2.2.5[/B]
- Fixed Favourite bug, now you can add links to favourites and run it
[B]Version 2.2.6[/B]
- Fixed the recent in the streaming site change done by you know who!
[B]Version 2.2.7[/B]
- Small bug in next page
[B]Version 2.2.9[/B]
- change on the website reflected in the addon
[B]Version 2.3.0[/B]
- Gotham dependencies
[B]Version 2.3.1[/B]
- added ARY Digital and news in eb section
[B]Version 2.3.1[/B]
- Removed Common
[B]Version 2.4.0[/B]
- Added "Other" source
[B]Version 2.4.1[/B]
- Added Babytv
[B]Version 2.4.2[/B]
- Added StarGold
[B]Version 2.4.3[/B]
- fixed dunya news hd in other

[B]Version 2.4.4[/B]
- fixed newsone

[B]Version 2.4.5[/B]
- added manual ary and expressnews

[B]Version 2.4.6[/B]
- removed non working wmv channels
[B]Version 2.4.7[/B]
- Fixed sorting and added some new channels in zem section

[B]Version 3.0.0[/B]
- Support for "All sources" in the settings and context menu. if default source is not available then it will show all available. Also added Playwire video playing support too.

B]Version 3.0.1[/B]
- Added ETV Urdu and Ary zindagi
B]Version 3.0.2[/B]
- Added Sky sports and few test channels
B]Version 3.0.3[/B]
- some tweaks
B]Version 3.0.4[/B]
- update v2 links
B]Version 3.0.6[/B]
- Fixed new outlook of Zem, added support for ebound video
B]Version 3.0.7[/B]
- Fixed DM source